Initial project setup with BLE integration
Bootstrap React Native project with Android and iOS support, including ESLint and Prettier configuration. Add custom Android BLE (Bluetooth Low Energy) integration for LifeBand device, including native modules, service, and event emitter. Set up navigation, context, hooks, and screens for patient and doctor flows. Add initial tests, API client, and store setup. Update .gitignore for React Native and platform-specific files.

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,23 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# React Native
+.DS_Store
+android/.gradle
+android/app/build/
+android/build/
+android/.cxx/
+android/local.properties
+android/*.iml
+android/.idea/
+android/*.keystore
+android/app/debug.keystore
+**/fastlane/report.xml
+**/fastlane/Preview.html
+**/fastlane/screenshots
+**/fastlane/test_output
+*.jsbundle
+**/Pods/
+/vendor/bundle/
+.metro-health-check*
