feat: redesign login screen with mother-baby animation and maternal care theme
- Add beautiful animated mother-baby connection with heartbeat effect
- Remove verbose marketing text for cleaner app-like design
- Create LoadingScreen component with maternal care animations
- Add ProfileScreen for user profile management
- Implement responsive design utilities
- Add build fix scripts and gesture handler patch
- Update .gitignore to exclude android_clean directory with long paths
- Optimize animation sizes for better mobile UX

--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,6 @@ android/app/debug.keystore
 **/Pods/
 /vendor/bundle/
 .metro-health-check*
+
+# Android clean build directory (contains very long paths)
+android_clean/
