--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -39,3 +39,9 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+# Release keystore configuration
+MYAPP_RELEASE_STORE_FILE=lifeband-release.keystore
+MYAPP_RELEASE_KEY_ALIAS=lifeband-key
+MYAPP_RELEASE_STORE_PASSWORD=Life-band@2025
+MYAPP_RELEASE_KEY_PASSWORD=Life-band@2025
