--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "android:release": "react-native run-android --variant=release",
+    "build:android": "cd android && .\\gradlew assembleRelease",
+    "build:android:bundle": "cd android && .\\gradlew bundleRelease",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
