--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "axios": "^1.7.7",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "2.6.2",
+    "react-native-qrcode-scanner": "^1.5.5",
+    "react-native-qrcode-svg": "^6.3.20",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "^4.16.0",
-    "react-native-svg": "^13.14.0",
+    "react-native-svg": "^15.2.0",
     "victory-native": "^36.9.1",
     "zustand": "^4.5.2"
   },
