Refined the app

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # API Configuration
 API_BASE=https://lifeband-api.example.com
-WS_BASE=wss://lifeband-api.example.com
+# Point to the live risk feed server (run `npm run start:risk-feed`)
+WS_BASE=ws://localhost:8088
 
 # BLE Device Configuration
 DEVICE_NAME_PREFIX=LifeBand
