--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
+    "start:risk-feed": "node server/live-risk-feed.js",
     "test": "jest",
     "postinstall": "patch-package"
   },
@@ -55,7 +56,8 @@
     "prettier": "2.8.8",
     "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "ws": "^8.18.3"
   },
   "engines": {
     "node": ">=18"
